Bug 568835: Background for 'always show at startup' has wrong color
Background color in the dark theme should not be white.
Also: The text color in the light theme should be not a hard black
but the same color used for all the text on the intro page.

--- a/org.eclipse.ui.intro.universal/themes/solstice/html/qroot.css
+++ b/org.eclipse.ui.intro.universal/themes/solstice/html/qroot.css
@@ -79,7 +79,7 @@ html, body {
 	position: fixed;
 	bottom: 10px;
 	right: 10px;
-	background: white;
+	color: #4D4D4D;
 	z-index: 100;
 }
 
