--- a/org.eclipse.ui.intro.universal/themes/solstice/html/shared.css
+++ b/org.eclipse.ui.intro.universal/themes/solstice/html/shared.css
@@ -502,7 +502,7 @@ iframe {
     background-color:#3d3d3d;
   }
 
-  H1, H2, H3, H4, p, a {
+  H1, H2, H3, H4, p, a, label {
     color: #f0f0f0;
   }
 
